--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -20,20 +20,12 @@ jobs:
           node-version: '13.x'
       - run: npm install
       - run: npm run build
-      - name: Publish to NPM
-        run: |
-          npm config set //registry.npmjs.org/:_authToken ${NPM_TOKEN}
-          npm publish --ignore-scripts --access public
-        env:
-          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
       - name: Create artifact
         run: |
-          mkdir ${{ env.RELEASE_VERSION }}-dist && cp dist/farmOS-map* ${{ env.RELEASE_VERSION }}-dist && zip -r ${{ env.RELEASE_VERSION }}-dist.zip ${{ env.RELEASE_VERSION }}-dist
+          mkdir ${{ env.RELEASE_VERSION }}-dist && cp dist/nfa-map* ${{ env.RELEASE_VERSION }}-dist && zip -r ${{ env.RELEASE_VERSION }}-dist.zip ${{ env.RELEASE_VERSION }}-dist
       - name: Create Release
         uses: softprops/action-gh-release@6034af24fba4e5a8e975aaa6056554efe4c794d0 #0.1.13
         with:
-          body: |
-            See [CHANGELOG.md](https://github.com/farmOS/farmOS-map/blob/${{ env.RELEASE_VERSION }}/CHANGELOG.md) for release notes.
           files: ${{ env.RELEASE_VERSION }}-dist.zip
           draft: false
           prerelease: false
